[tool.poetry]
name = "DigitalPy"
version = "0.3.17"
description = "A python implementation of the aphrodite's specification, heavily based on WCMF"
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
packages = [{ include = "digitalpy" }]
include = [
    "digitalpy/**/*.json",
    "digitalpy/**/*.py",
    "digitalpy/**/*.ini",
    "digitalpy/**/*.conf",
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^80.9.0"
rule-engine = "^4.5.3"
'ruamel.yaml' = "^0.18.6"
pyzmq = "^26.4.0"
opentelemetry-sdk = "^1.28.0"
lxml = "^5.3.0"
xmltodict = "^0.14.1"
flask_cors = "^5.0.0"
sqlalchemy = "^2.0.30"
flask_jwt_extended = "^4.6.0"
requests = "^2.32.0"
psutil = "^6.1.0"
rns = "^0.9.2"
lxmf = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.5"
tox = "^4.23.2"

[tool.tox]
env_list = ["py310"]
skip_dist = true

[tool.tox.env_run_base]
deps = ["pytest", "pytest-cov", "coverage", "-e ."]
commands = [["pytest", "--cov=.", "--cov-report=xml", "tests/"]]

[[tool.tox.env]]
name = "py310"
base_python = "python3.10"

[tool.coverage.run]
relative_files = true

[tool.flakeheaven]
# optionally inherit from remote config (or local if you want)
base = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flakeheaven.toml"
baseline = ".flakeheaven_baseline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
